using System.Net.Sockets;
using Axlebolt.RpcSupport.Protobuf;
using StandRiseServer.Core;
using Google.Protobuf;
using MongoDB.Driver;

namespace StandRiseServer.Services;

public class ClanService
{
    private readonly ProtobufHandler _handler;
    private readonly DatabaseService _database;
    private readonly SessionManager _sessionManager;

    public ClanService(ProtobufHandler handler, DatabaseService database, SessionManager sessionManager)
    {
        _handler = handler;
        _database = database;
        _sessionManager = sessionManager;

        Console.WriteLine("üè∞ Registering ClanService handlers...");
        _handler.RegisterHandler("ClanRemoteService", "getPlayerClan", GetPlayerClanAsync);
        _handler.RegisterHandler("ClanRemoteService", "getClan", GetClanAsync);
        _handler.RegisterHandler("ClanRemoteService", "createClan", CreateClanAsync);
        _handler.RegisterHandler("ClanRemoteService", "leaveClan", LeaveClanAsync);
        _handler.RegisterHandler("ClanRemoteService", "findClan", FindClanAsync);
        _handler.RegisterHandler("ClanRemoteService", "getRoles", GetRolesAsync);
        _handler.RegisterHandler("ClanRemoteService", "getLevels", GetLevelsAsync);
        _handler.RegisterHandler("ClanRemoteService", "getAllClanMembers", GetAllClanMembersAsync);
        _handler.RegisterHandler("ClanRemoteService", "requestToJoinClan", RequestToJoinClanAsync);
        _handler.RegisterHandler("ClanRemoteService", "inviteToClan", InviteToClanAsync);
        _handler.RegisterHandler("ClanRemoteService", "cancelRequest", CancelRequestAsync);
        _handler.RegisterHandler("ClanRemoteService", "declineRequest", DeclineRequestAsync);
        _handler.RegisterHandler("ClanRemoteService", "kickMember", KickMemberAsync);
        _handler.RegisterHandler("ClanRemoteService", "assignRoleToMember", AssignRoleToMemberAsync);
        _handler.RegisterHandler("ClanRemoteService", "assignLeaderRole", AssignLeaderRoleAsync);
        _handler.RegisterHandler("ClanRemoteService", "changeClanName", ChangeClanNameAsync);
        _handler.RegisterHandler("ClanRemoteService", "changeClanType", ChangeClanTypeAsync);
        _handler.RegisterHandler("ClanRemoteService", "upgradeClan", UpgradeClanAsync);
        _handler.RegisterHandler("ClanRemoteService", "setClanAvatar", SetClanAvatarAsync);
        _handler.RegisterHandler("ClanRemoteService", "sendMsgToClan", SendMsgToClanAsync);
        _handler.RegisterHandler("ClanRemoteService", "getClanMsgs", GetClanMsgsAsync);
        _handler.RegisterHandler("ClanRemoteService", "readClanMsgs", ReadClanMsgsAsync);
        _handler.RegisterHandler("ClanRemoteService", "deleteClanMsgs", DeleteClanMsgsAsync);
        _handler.RegisterHandler("ClanRemoteService", "getUnreadClanMessagesCount", GetUnreadClanMessagesCountAsync);
        _handler.RegisterHandler("ClanRemoteService", "getPlayerOpenRequests", GetPlayerOpenRequestsAsync);
        _handler.RegisterHandler("ClanRemoteService", "getPlayerClosedRequests", GetPlayerClosedRequestsAsync);
        _handler.RegisterHandler("ClanRemoteService", "getClanOpenRequests", GetClanOpenRequestsAsync);
        _handler.RegisterHandler("ClanRemoteService", "getClanClosedRequests", GetClanClosedRequestsAsync);
        _handler.RegisterHandler("ClanRemoteService", "getAvatars", GetAvatarsAsync);
        Console.WriteLine("üè∞ ClanService handlers registered!");
    }

    private async Task GetPlayerClanAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            // –í–æ–∑–≤—Ä–∞—â–∞–µ–º –ø—É—Å—Ç–æ–π –∫–ª–∞–Ω (–∏–≥—Ä–æ–∫ –Ω–µ –≤ –∫–ª–∞–Ω–µ)
            var clan = new Clan();
            var result = new BinaryValue { IsNull = false, One = ByteString.CopyFrom(clan.ToByteArray()) };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetPlayerClan: {ex.Message}");
        }
    }

    private async Task GetClanAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var clan = new Clan();
            var result = new BinaryValue { IsNull = false, One = ByteString.CopyFrom(clan.ToByteArray()) };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetClan: {ex.Message}");
        }
    }

    private async Task CreateClanAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üè∞ CreateClan Request");
            var clan = new Clan { Id = Guid.NewGuid().ToString() };
            var result = new BinaryValue { IsNull = false, One = ByteString.CopyFrom(clan.ToByteArray()) };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå CreateClan: {ex.Message}");
        }
    }

    private async Task LeaveClanAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå LeaveClan: {ex.Message}");
        }
    }

    private async Task FindClanAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = false };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå FindClan: {ex.Message}");
        }
    }

    private async Task GetRolesAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = false };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetRoles: {ex.Message}");
        }
    }

    private async Task GetLevelsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = false };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetLevels: {ex.Message}");
        }
    }

    private async Task GetAllClanMembersAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = false };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetAllClanMembers: {ex.Message}");
        }
    }

    private async Task RequestToJoinClanAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå RequestToJoinClan: {ex.Message}");
        }
    }

    private async Task InviteToClanAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå InviteToClan: {ex.Message}");
        }
    }

    private async Task CancelRequestAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå CancelRequest: {ex.Message}");
        }
    }

    private async Task DeclineRequestAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå DeclineRequest: {ex.Message}");
        }
    }

    private async Task KickMemberAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå KickMember: {ex.Message}");
        }
    }

    private async Task AssignRoleToMemberAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå AssignRoleToMember: {ex.Message}");
        }
    }

    private async Task AssignLeaderRoleAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå AssignLeaderRole: {ex.Message}");
        }
    }

    private async Task ChangeClanNameAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå ChangeClanName: {ex.Message}");
        }
    }

    private async Task ChangeClanTypeAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå ChangeClanType: {ex.Message}");
        }
    }

    private async Task UpgradeClanAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå UpgradeClan: {ex.Message}");
        }
    }

    private async Task SetClanAvatarAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var avatarId = new Axlebolt.RpcSupport.Protobuf.String { Value = Guid.NewGuid().ToString() };
            var result = new BinaryValue { IsNull = false, One = ByteString.CopyFrom(avatarId.ToByteArray()) };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå SetClanAvatar: {ex.Message}");
        }
    }

    private async Task SendMsgToClanAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå SendMsgToClan: {ex.Message}");
        }
    }

    private async Task GetClanMsgsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = false };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetClanMsgs: {ex.Message}");
        }
    }

    private async Task ReadClanMsgsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå ReadClanMsgs: {ex.Message}");
        }
    }

    private async Task DeleteClanMsgsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå DeleteClanMsgs: {ex.Message}");
        }
    }

    private async Task GetUnreadClanMessagesCountAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var count = new Axlebolt.RpcSupport.Protobuf.Integer { Value = 0 };
            var result = new BinaryValue { IsNull = false, One = ByteString.CopyFrom(count.ToByteArray()) };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetUnreadClanMessagesCount: {ex.Message}");
        }
    }

    private async Task GetPlayerOpenRequestsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = false };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetPlayerOpenRequests: {ex.Message}");
        }
    }

    private async Task GetPlayerClosedRequestsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = false };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetPlayerClosedRequests: {ex.Message}");
        }
    }

    private async Task GetClanOpenRequestsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = false };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetClanOpenRequests: {ex.Message}");
        }
    }

    private async Task GetClanClosedRequestsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = false };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetClanClosedRequests: {ex.Message}");
        }
    }

    private async Task GetAvatarsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            var result = new BinaryValue { IsNull = false };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetAvatars: {ex.Message}");
        }
    }
}
